syntax = "proto3";

package ss_ledger;

message SSLedger {
    string  partner = 1;
    int64   last_mp_exchange = 2;
    uint64  mp_exchange_count = 3;
    bool    whitelisted = 4;
    int64   last_whitelist_check = 5;
    double  invoice = 6;
    uint64  bytes_paid = 7;
    uint64  bytes_pay_recvd = 8;
    double  sent = 9;
    double  recvd = 10;
    string  role = 11;
    string  signed_mp = 12;
    string  device_id = 13;
    uint64  bytes_sent = 14;
    uint64  bytes_recvd = 15;
    uint64  blocks_sent = 16;
    uint64  blocks_recvd = 17;
    bytes   metadata = 18;
}
